# Pixie

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
Pixie/: CMakeLists.txt
Pixie/CMake/: GoogleTest.cmake  MParkVariant.cmake  Message.cmake
Pixie/Include/Pixie/Concepts/: Object.h  PObject.h  Tickable.h
Pixie/Include/Pixie/Concepts/Virtual/: Begin.h  End.h  Tick.h
Pixie/Include/Pixie/Core/: Clock.h  Core.h  Engine.h  ObjectInitializer.h  Placeholders.h  Scene.h
Pixie/Include/Pixie/Core/Engine/: Clock.h  Engine.h
Pixie/Include/Pixie/Core/Scene/: Forest.h  Scene.h  Tree.h
Pixie/Include/Pixie/Misc/: PixieExports.h  Placeholders.h
Pixie/Include/Pixie/Utility/: Chrono.h  TypeTraits.h
Pixie/Source/Core/: Core.cpp  Engine.cpp  Scene.cpp
Pixie/Test/: CMakeLists.txt
Pixie/Test/Concepts/: TickableTest.cpp
Pixie/Test/Core/: CoreTest.cpp  SceneForestTest.cpp  SceneTest.cpp
